# nr-agentic-ai-api

./: .gitignore  INTEGRATION_GUIDE.md  README.md  main.py  pyproject.toml  run_tests.py  steps.md  test.http
.github/workflows/: .builds.yml  pr-open.yml
app/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
app/agenticai/: README.md  __init__.py
app/agenticai/agents/: __init__.py
app/agenticai/endpoints/: __init__.py  conditional_workflow.py
app/agenticai/models/: __init__.py
app/agenticai/tools/: __init__.py
app/agenticai/workflows/: __init__.py
app/api/: __init__.py
app/api/agents/: llm_helper.py  orchestrator_agent.py  permissions_agent.py  source_agent.py  usage_agent.py
app/api/endpoints/: health.py  indexer.py  orchestrator.py  orchestrator_endpoints.py
app/app/api/endpoints/: chat.py  health.py
app/app/core/: config.py
app/core/: config.py  logging.py
app/llm/: agents.py  verification_agent_llm.py  workflow.py
app/llm/agents/: land_agent.py  water_agent.py
app/llm/prompts/: water_prompt.py
app/llm/tools/: ai_search_tool.py  echo_tool.py  form_verification_tool.py
app/models/: chat.py
app/search_indexer/: web_crawler.py
app/services/: ai_service.py
app/src/nr_agentic_ai_api/: __init__.py  main.py
infra/modules/backend/: main.tf  outputs.tf  variables.tf
infra/modules/cosmos/: main.tf  outputs.tf  variables.tf
src/nr_agentic_ai_api/: main.py
tests/: README.md  test_main_integration.py  test_process_endpoint.py
