[project]
name = "ai-agent"
version = "0.1.0"
description = "AI Agent API built with FastAPI and LangChain"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn[standard]>=0.30.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.28",
    "openai>=1.99.3",
    "httpx>=0.25.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "psutil>=5.9.0",
    "langchain-community>=0.3.27",
    "azure-storage-blob>=12.26.0",
    "azure-search-documents>=11.5.3",
    "azure-identity>=1.24.0",
    "beautifulsoup4>=4.13.4",
    "azure-ai-documentintelligence>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
